--- a/index.html
+++ b/index.html
@@ -61,72 +61,31 @@
         </div>
         <!-- /.container -->
     </nav>
-    <div id="fullpage">
-        <div class="section full" id="home">
+    <div class="full" id="home">
 
-            <div class="container" style="margin-top: 1%; margin-bottom: 5%;">
-                <div class="row">
-                    <div class="col-md-7">
-                        <div class="el-color--white">
-                            <h3> hxa design, </h1>
-                                <p> hxa is a design & marketing agency for blockchain companies. </p>
+        <div class="container" style=" height: 100vh; margin-top: 20%; margin-bottom: 5%;">
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="el-color--white">
+                        <h3> hxa design, </h1>
+                            <p> hxa is a design & marketing agency for blockchain companies. </p>
 
-                                <p>We believe that blockchain is the technology of the future and our greatest opportunity to improve the way people live and communicate. </p>
-                                <p> We empower companies to thrive, stand-out amongst the crowd, better communicate themselves, and to have the greatest shot at success.</p>
-                                </p>
-                        </div>
-
+                            <p>We believe that blockchain is the technology of the future and our greatest opportunity to improve the way people live and communicate. </p>
+                            <p> We empower companies to thrive, stand-out amongst the crowd, better communicate themselves, and to have the greatest shot at success.</p>
+                            </p>
                     </div>
 
+                </div>
 
-                    <div class="col-md-offset-9">
-                        <div class="el-color--white">
-                            <img src="img/logo-circle.svg" class="hvr-grow" height="200px">
-                        </div>
+
+                <div class="col-md-offset-9">
+                    <div class="el-color--white">
+                        <img src="img/logo-circle.svg" class="hvr-grow " height="200px">
                     </div>
                 </div>
             </div>
         </div>
-
-
-        <div class="section" style="height: 100vh; margin-top: -10px;" id="contact">
-            <!-- Contact -->
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-7">
-                        <div class="el-color--black">
-                            <h3> Contact Us </h1>
-                                <p> hxa is a design & marketing agency for blockchain companies. </p>
-
-                                <p>We believe that blockchain is the technology of the future and our greatest opportunity to improve the way people live and communicate. </p>
-                                <p> We empower companies to thrive, stand-out amongst the crowd, better communicate themselves, and to have the greatest shot at success.</p>
-                                </p>
-
-                                <form class="form-inline">
-                                    <div class="form-group">
-                                        <label for="exampleInputName2">Name</label>
-                                        <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail2">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
-                                    </div>
-                                    <button type="submit" class="btn btn-default">Send invitation</button>
-                                </form>
-                        </div>
-
-                    </div>
-
-
-                    <div class="col-md-offset-9">
-                        <div class="el-color--white">
-                            <img src="img/logo-chat.svg" class="hvr-rotate" height="200px">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
 
 
 
@@ -137,91 +96,12 @@
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#fullpage').fullpage({
-                //Navigation
-                menu: '#menu',
-                lockAnchors: true,
-                anchors: ['home', 'contact'],
-                navigation: true,
-                navigationPosition: 'right',
-                showActiveTooltip: false,
-                slidesNavigation: false,
-                slidesNavPosition: 'top',
 
-                //Scrolling
-                css3: true,
-                scrollingSpeed: 700,
-                autoScrolling: true,
-                fitToSection: true,
-                fitToSectionDelay: 1000,
-                scrollBar: false,
-                easing: 'easeInOutElastic',
-                easingcss3: 'ease',
-                loopBottom: false,
-                loopTop: false,
-                loopHorizontal: true,
-                continuousVertical: true,
-                continuousHorizontal: false,
-                scrollHorizontally: false,
-                interlockedSlides: false,
-                dragAndMove: false,
-                offsetSections: false,
-                resetSliders: false,
-                fadingEffect: false,
-                normalScrollElements: '#contact, #home',
-                scrollOverflow: false,
-                scrollOverflowReset: false,
-                scrollOverflowOptions: null,
-                touchSensitivity: 15,
-                normalScrollElementTouchThreshold: 5,
-                bigSectionsDestination: null,
-
-                //Accessibility
-                keyboardScrolling: true,
-                animateAnchor: true,
-                recordHistory: true,
-
-                //Design
-                controlArrows: true,
-                verticalCentered: true,
-                sectionsColor: ['#783CBD', '#2CFEF6'],
-                paddingTop: '2em',
-                paddingBottom: '10px',
-
-                responsiveWidth: 0,
-                responsiveHeight: 0,
-                responsiveSlides: true,
-                parallax: true,
-                parallaxOptions: {
-                    type: 'reveal',
-                    percentage: 62,
-                    property: 'translate'
-                },
-
-                //Custom selectors
-                sectionSelector: '.section',
-                slideSelector: '.slide',
-
-                lazyLoading: true,
-
-                //events
-                onLeave: function(index, nextIndex, direction) {},
-                afterLoad: function(anchorLink, index) {},
-                afterRender: function() {},
-                afterResize: function() {},
-                afterResponsive: function(isResponsive) {},
-                afterSlideLoad: function(anchorLink, index, slideAnchor, slideIndex) {},
-                onSlideLeave: function(anchorLink, index, slideIndex, direction, nextSlideIndex) {}
-            });
-        });
-    </script>
 
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.js"></script>
+
 </body>
 
 </html>
