--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
     <div class="full" id="home">
 
-        <div class="container" style=" height: 100vh; margin-top: 20%; margin-bottom: 5%;">
+        <div class="container" style="margin-top: 20%; margin-bottom: 5%;">
             <div class="row">
                 <div class="col-md-7">
                     <div class="el-color--white">
