--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"> <object type="image/svg+xml" data="img/logo-blue.svg" height="30px" class="logo hvr-shrink">
+                <a class="navbar-brand" href="index.html"> <object type="image/svg+xml" data="img/logo-purple.svg" height="30px" class="logo hvr-shrink">
                     
                 </object></a>
             </div>
@@ -53,7 +53,7 @@
                 <ul class="nav navbar-nav navbar-right ">
 
                     <li data-menu-anchor="contact">
-                        <a class="el-color--white hvr-grow" style="margin-top:5px;" href="#contact">Contact</a>
+                        <a class="el-color--black hvr-grow" style="margin-top:5px;" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -66,7 +66,7 @@
         <div class="container" style="margin-top: 20%; margin-bottom: 5%;">
             <div class="row">
                 <div class="col-md-7">
-                    <div class="el-color--white">
+                    <div class="el-color--black">
                         <h3> hxa design, </h1>
                             <p> hxa is a design & marketing agency for blockchain companies. </p>
 
@@ -80,7 +80,7 @@
 
                 <div class="col-md-offset-9">
                     <div class="el-color--white">
-                        <img src="img/logo-circle.svg" class="hvr-grow " height="200px">
+                        <img src="img/logo-circle-purple.svg" class="hvr-grow " height="200px">
                     </div>
                 </div>
             </div>
