--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body class="full">
+<body class="full" style="background-color: white !important;">
 
     <!-- Navigation -->
     <nav id="menu" data-end="background-color:rgb(0,0,255);transform[bounce]:rotate(0deg);" class="navbar navbar-transparent" role="navigation">
