--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
                 </div>
 
-
                 <div class="col-md-offset-9">
                     <div class="el-color--white">
-                        <img src="img/logo-circle-purple.svg" class="hvr-grow " height="250px">
+                        <img src="img/logo-circle-purple.svg" class="hvr-grow cir-logo">
+                        <a href="mailto:digitalcody@gmail.com"> <img src="img/logo-chat-purple.svg" class="hvr-grow chat-logo hidden-lg hidden-md"></a>
                     </div>
                 </div>
             </div>
