ALex's Grammer Coorections

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <ul class="nav navbar-nav navbar-right ">
 
                     <li data-menu-anchor="contact">
-                        <a class="el-color--black hvr-grow" style="margin-top:5px;" href="#contact">Contact</a>
+                        <a class="el-color--black hvr-grow" style="margin-top:5px;" href="mailto:alex@newbloom.com">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="el-color--black">
-                        <h3> hxa design, </h1>
+                        <h3> hxa design </h1>
                             <p> hxa is a design & marketing agency for blockchain companies. </p>
 
                             <p>We believe that blockchain is the technology of the future and our greatest opportunity to improve the way people live and communicate. </p>
