--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
                 <div class="col-md-7">
                     <div class="el-color--black">
                         <h3> hxa design </h1>
-                            <p> hxa is a design & marketing agency for blockchain companies. </p>
 
-                            <p>We believe that blockchain is the technology of the future and our greatest opportunity to improve the way people live and communicate. </p>
-                            <p> We empower companies to thrive, stand-out amongst the crowd, better communicate themselves, and to have the greatest shot at success.</p>
+                            <p>HXA Design delivers the blockchain. We provide organizations with the strategic, technical, and visual design solutions needed for success. Our clients, including VC's start-ups, hedge funds, international institutions, and
+                                traditional businesses, rely on us in order to thrive in this fast-evolving environment.
                             </p>
                     </div>
 
@@ -80,7 +79,7 @@
                 <div class="col-md-offset-9">
                     <div class="el-color--white">
                         <img src="img/logo-circle-purple.svg" class="hvr-grow cir-logo">
-                        <a href="mailto:digitalcody@gmail.com"> <img src="img/logo-chat-purple.svg" class="hvr-grow chat-logo hidden-lg hidden-md"></a>
+                        <a href="mailto:"> <img src="img/logo-chat-purple.svg" class="hvr-grow chat-logo hidden-lg hidden-md"></a>
                     </div>
                 </div>
             </div>
