--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <ul class="nav navbar-nav navbar-right ">
 
                     <li data-menu-anchor="contact">
-                        <a class="el-color--black hvr-grow" style="margin-top:5px;" href="mailto:alex@newbloom.com">Contact</a>
+                        <a class="el-color--black hvr-grow" style="margin-top:5px;" href="mailto:alexander@hxa.design">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -80,7 +80,7 @@
                 <div class="col-md-offset-9">
                     <div class="el-color--white">
                         <img src="img/logo-circle-purple.svg" class="hvr-grow cir-logo">
-                        <a href="mailto:"> <img src="img/logo-chat-purple.svg" class="hvr-grow chat-logo hidden-lg hidden-md"></a>
+                        <a href="href=mailto:alexander@hxa.design"> <img src="img/logo-chat-purple.svg" class="hvr-grow chat-logo hidden-lg hidden-md"></a>
                     </div>
                 </div>
             </div>
