--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                         <h3> hxa design </h1>
 
                             <p>HXA Design delivers the blockchain. </p>
-                            <p>We provide organizations with the strategic, technical, and visual design solutions needed for success. </p>
-                            Our clients, including VC's start-ups, hedge funds, international institutions, and traditional businesses, rely on us in order to thrive in this fast-evolving environment.
+                            <p>We provide organizations with the strategic, technical, and visual design solutions needed for success. Our clients, including VC's start-ups, hedge funds, international institutions, and traditional businesses, rely on us
+                                in order to thrive in this fast-evolving environment.
                             </p>
                     </div>
 
