--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="el-color--black">
-                        <h3> hxa design </h1>
+                        <h3>>hxa design delivers the blockchain. </h1>
 
-                            <p>HXA Design delivers the blockchain. </p>
                             <p>We provide organizations with the strategic, technical, and visual design solutions needed for success. Our clients, including VC's start-ups, hedge funds, international institutions, and traditional businesses, rely on us
                                 in order to thrive in this fast-evolving environment.
                             </p>
