--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-md-offset-9">
                     <div class="el-color--white">
                         <img src="img/logo-circle-purple.svg" class="hvr-grow cir-logo">
-                        <a href="href=mailto:alexander@hxa.design"> <img src="img/logo-chat-purple.svg" class="hvr-grow chat-logo hidden-lg hidden-md"></a>
+                        <a href="mailto:alexander@hxa.design"> <img src="img/logo-chat-purple.svg" class="hvr-grow chat-logo hidden-lg hidden-md"></a>
                     </div>
                 </div>
             </div>
