Changed the maymays

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>hxa design</title>
+    <title>HXA | Strategic Design</title>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="a blockchain design and marketing agency">
+    <meta name="description" content="HXA is a worldclass strategy and design agenc">
     <meta name="keywords" content="blockchain,block chain design,crypto marketing,ICO design">
     <meta name="author" content="HXA">
     <!-- Style Sheets -->
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"> <object type="image/svg+xml" data="img/logo-purple.svg" height="30px" class="logo hvr-shrink">
+                <a class="navbar-brand" href="index.html"> <object type="image/svg+xml" data="img/logo-fill-purple.svg" height="70px" class="logo hvr-shrink">
                     
                 </object></a>
             </div>
@@ -65,20 +65,20 @@
 
         <div class="container" style="margin-top: 20%; margin-bottom: 5%;">
             <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-6">
                     <div class="el-color--black">
-                        <h3>hxa design delivers the blockchain. </h1>
+                        <h1>We are HXA </h1>
 
-                            <p>We provide organizations with the strategic, technical, and visual design solutions needed for success. Our clients, including VC's, start-ups, hedge funds, international institutions, and traditional businesses, rely on us
-                                in order to thrive in this fast-evolving environment.
-                            </p>
+                        <h3>We provide organizations with the strategic, technical, and visual design solutions needed for success. Our clients, including VC's, start-ups, hedge funds, international institutions, and traditional businesses, rely on us in
+                            order to thrive in this fast-evolving environment.
+                        </h3>
                     </div>
 
                 </div>
 
-                <div class="col-md-offset-9">
+                <div class="col-md-6">
                     <div class="el-color--white">
-                        <img src="img/logo-circle-purple.svg" class="hvr-grow cir-logo">
+                        <img src="img/hero@3x.png" class="img-responsive">
                         <a href="mailto:alexander@hxa.design"> <img src="img/logo-chat-purple.svg" class="hvr-grow chat-logo hidden-lg hidden-md"></a>
                     </div>
                 </div>
