--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 </head>
 
 <body class="full" style="background-color: white !important;">
-
+    <div class="alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Temporary Site</strong> Better check yourself, you're not looking too good.
+    </div>
     <!-- Navigation -->
     <nav id="menu" data-end="background-color:rgb(0,0,255);transform[bounce]:rotate(0deg);" class="navbar navbar-transparent" role="navigation">
         <div class="container">
@@ -48,6 +51,8 @@
                     
                 </object></a>
             </div>
+
+
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right ">
@@ -76,14 +81,10 @@
 
                 </div>
 
-                <div class="col-md-6">
-                    <div class="el-color--white">
-                        <img src="img/hero@3x.png" class="img-responsive">
-                        <a href="mailto:alexander@hxa.design"> <img src="img/logo-chat-purple.svg" class="hvr-grow chat-logo hidden-lg hidden-md"></a>
-                    </div>
-                </div>
+
             </div>
         </div>
+    </div>
     </div>
 
 
