--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body class="full" style="background-color: white !important;">
     <div class="alert alert-warning alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>Temporary Site</strong> Better check yourself, you're not looking too good.
+        <strong>Temporary Site</strong> Our New Site will be up shortly :)
     </div>
     <!-- Navigation -->
     <nav id="menu" data-end="background-color:rgb(0,0,255);transform[bounce]:rotate(0deg);" class="navbar navbar-transparent" role="navigation">
