--- a/index.html
+++ b/index.html
@@ -81,10 +81,14 @@
 
                 </div>
 
+                <div class="col-md-6">
+                    <div class="el-color--white">
+                        <img src="img/hero@3x.png" class="img-responsive">
 
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 
 
